tests/NormalTests/paczka2/big_fuzzy/13269352.err
Error in line 7: QImb S523 88,6
Error in line 1: S765 S765 0,1
Error in line 18: QImb S523 38,2
Error in line 19: S765 A526 97,9
Error in line 27: gSXs A526 15,0
Error in line 43: QImb S523 15,4
Error in line 49: S765 A526 24,0
Error in line 54: i3wFAPgObg S167 -3,2
Error in line 69: QImb S167 11,2
Error in line 58: gSXs S765 57,9
Error in line 75: QImb S765 51,5
Error in line 86: gSXs A526 58,9
Error in line 71: kUu S765 184,4
Error in line 66: 288oeCAYZX S167 77,3
Error in line 107: kUu S167 12,6
Error in line 108: kUu S523 87,9
Error in line 112: 288oeCAYZX S523 10,6
Error in line 119: QImb A526 92,0
Error in line 123: QImb S167 58,80
Error in line 126: dpD S523 23,3
Error in line 129: dpD S765 5,0
Error in line 141: dpD S167 48,5
Error in line 142: dpD A526 68,8
Error in line 133: QImb S167 227,4
Error in line 150: QImb S765 4,3
Error in line 151: QImb S167 19,6
Error in line 152: dpD A526 97,7
Error in line 176: i3wFAPgObg S765 75,8
Error in line 177: gSXs S765 192,0
Error in line 182: 288oeCAYZX S765 97,9
Error in line 190: S765 S167 5,7
Error in line 192: S765 S765 98,6
Error in line 205: kUu A526 -5,2
Error in line 203: S765 S765 57,6
Error in line 202: 288oeCAYZX A526 61,8
Error in line 211: 288oeCAYZX S765 12,6
Error in line 216: i3wFAPgObg S167 69,6
Error in line 228: QImb A526 75,0
Error in line 237: kUu A526 232,1
